# AI_QA_Testing

./: .gitignore  00_PyTorch_fundamentals.ipynb  README.md  Untitled Diagram.drawio  installer.bat  pyproject.toml  virtual_environment.bat
dbt_project/models/staging/: tpch_sources.yml
ml/: teams.py
ml/snowflake/: w3.sql
src/package/console_scripts/: run.py
src/package/framework/snowflake/: connector.py
test/: my_test-suits.robot
